samples/_failures_safe/1761128721_7c5fc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07d2096a.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_07d2096a.c:138:12: error: missing terminating " character
  138 |     printf("Most frequent level:
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_07d2096a.c:138:5: error: expected expression at end of input
  138 |     printf("Most frequent level:
      |     ^~~~~~
./samples/SAFE/__tmp_07d2096a.c:138:5: error: expected declaration or statement at end of input
